--- a/css/hyde-x.css
+++ b/css/hyde-x.css
@@ -288,7 +288,7 @@ a.label:focus {
 
 /* Blue */
 .theme-base-0d .label {
-  background-color: orange;
+  background-color: #6a9fb5;
 }
 
 .theme-base-0d .pagination > li > a,
