--- a/css/hyde.css
+++ b/css/hyde.css
@@ -224,11 +224,11 @@ a.sidebar-nav-item:focus {
 
 /* Blue */
 .theme-base-0d .sidebar {
-  background-color: orange;
+  background-color: #6a9fb5;
 }
 .theme-base-0d .content a,
 .theme-base-0d .related-posts li a:hover {
-  color: black;
+  color: #6a9fb5;
 }
 
 /* Magenta */
